# backend/api/gen/go/system/service/v1/menu.pb.validate.go
@@ -56,8 +56,6 @@ func (m *Menu) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for Id
-
 	for idx, item := range m.GetChildren() {
 		_, _ = idx, item
 
@@ -92,84 +90,73 @@ func (m *Menu) validate(all bool) error {
 
 	}
 
+	if m.Id != nil {
+		// no validation rules for Id
+	}
+
 	if m.ParentId != nil {
 		// no validation rules for ParentId
-	}
-
-	if m.OrderNo != nil {
-		// no validation rules for OrderNo
-	}
-
-	if m.Name != nil {
-		// no validation rules for Name
-	}
-
-	if m.Type != nil {
-		// no validation rules for Type
 	}
 
 	if m.Status != nil {
 		// no validation rules for Status
 	}
 
+	if m.Type != nil {
+		// no validation rules for Type
+	}
+
 	if m.Path != nil {
 		// no validation rules for Path
 	}
 
-	if m.Title != nil {
-		// no validation rules for Title
+	if m.Redirect != nil {
+		// no validation rules for Redirect
+	}
+
+	if m.Alias != nil {
+		// no validation rules for Alias
+	}
+
+	if m.Name != nil {
+		// no validation rules for Name
 	}
 
 	if m.Component != nil {
 		// no validation rules for Component
 	}
 
-	if m.Icon != nil {
-		// no validation rules for Icon
-	}
+	if m.Meta != nil {
 
-	if m.KeepAlive != nil {
-		// no validation rules for KeepAlive
-	}
+		if all {
+			switch v := interface{}(m.GetMeta()).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, MenuValidationError{
+						field:  "Meta",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, MenuValidationError{
+						field:  "Meta",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(m.GetMeta()).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return MenuValidationError{
+					field:  "Meta",
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
 
-	if m.Show != nil {
-		// no validation rules for Show
-	}
-
-	if m.IsExt != nil {
-		// no validation rules for IsExt
-	}
-
-	if m.ExtUrl != nil {
-		// no validation rules for ExtUrl
-	}
-
-	if m.HideBreadcrumb != nil {
-		// no validation rules for HideBreadcrumb
-	}
-
-	if m.HideTab != nil {
-		// no validation rules for HideTab
-	}
-
-	if m.HideMenu != nil {
-		// no validation rules for HideMenu
-	}
-
-	if m.HideChildrenInMenu != nil {
-		// no validation rules for HideChildrenInMenu
-	}
-
-	if m.HidePathForChildren != nil {
-		// no validation rules for HidePathForChildren
-	}
-
-	if m.CurrentActiveMenu != nil {
-		// no validation rules for CurrentActiveMenu
-	}
-
-	if m.Redirect != nil {
-		// no validation rules for Redirect
 	}
 
 	if m.CreateTime != nil {
@@ -347,6 +334,193 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = MenuValidationError{}
+
+// Validate checks the field values on RouteMeta with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *RouteMeta) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on RouteMeta with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in RouteMetaMultiError, or nil
+// if none found.
+func (m *RouteMeta) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *RouteMeta) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if m.ActiveIcon != nil {
+		// no validation rules for ActiveIcon
+	}
+
+	if m.ActivePath != nil {
+		// no validation rules for ActivePath
+	}
+
+	if m.AffixTab != nil {
+		// no validation rules for AffixTab
+	}
+
+	if m.AffixTabOrder != nil {
+		// no validation rules for AffixTabOrder
+	}
+
+	if m.Badge != nil {
+		// no validation rules for Badge
+	}
+
+	if m.BadgeType != nil {
+		// no validation rules for BadgeType
+	}
+
+	if m.BadgeVariants != nil {
+		// no validation rules for BadgeVariants
+	}
+
+	if m.HideChildrenInMenu != nil {
+		// no validation rules for HideChildrenInMenu
+	}
+
+	if m.HideInBreadcrumb != nil {
+		// no validation rules for HideInBreadcrumb
+	}
+
+	if m.HideInMenu != nil {
+		// no validation rules for HideInMenu
+	}
+
+	if m.HideInTab != nil {
+		// no validation rules for HideInTab
+	}
+
+	if m.Icon != nil {
+		// no validation rules for Icon
+	}
+
+	if m.IframeSrc != nil {
+		// no validation rules for IframeSrc
+	}
+
+	if m.IgnoreAccess != nil {
+		// no validation rules for IgnoreAccess
+	}
+
+	if m.KeepAlive != nil {
+		// no validation rules for KeepAlive
+	}
+
+	if m.Link != nil {
+		// no validation rules for Link
+	}
+
+	if m.Loaded != nil {
+		// no validation rules for Loaded
+	}
+
+	if m.MaxNumOfOpenTab != nil {
+		// no validation rules for MaxNumOfOpenTab
+	}
+
+	if m.MenuVisibleWithForbidden != nil {
+		// no validation rules for MenuVisibleWithForbidden
+	}
+
+	if m.OpenInNewWindow != nil {
+		// no validation rules for OpenInNewWindow
+	}
+
+	if m.Order != nil {
+		// no validation rules for Order
+	}
+
+	if m.Title != nil {
+		// no validation rules for Title
+	}
+
+	if len(errors) > 0 {
+		return RouteMetaMultiError(errors)
+	}
+
+	return nil
+}
+
+// RouteMetaMultiError is an error wrapping multiple validation errors returned
+// by RouteMeta.ValidateAll() if the designated constraints aren't met.
+type RouteMetaMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m RouteMetaMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m RouteMetaMultiError) AllErrors() []error { return m }
+
+// RouteMetaValidationError is the validation error returned by
+// RouteMeta.Validate if the designated constraints aren't met.
+type RouteMetaValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e RouteMetaValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e RouteMetaValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e RouteMetaValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e RouteMetaValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e RouteMetaValidationError) ErrorName() string { return "RouteMetaValidationError" }
+
+// Error satisfies the builtin error interface
+func (e RouteMetaValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sRouteMeta.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = RouteMetaValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = RouteMetaValidationError{}
 
 // Validate checks the field values on ListMenuResponse with the rules defined
 // in the proto definition for this message. If any rules are violated, the
